--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Meus atuais objetivos</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
+    <script src="main.js"></script>
 </body>
+
 </html>
